--- a/index.html
+++ b/index.html
@@ -301,6 +301,21 @@
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   Nội dung của bạn
               </li>
+            <li class="client-item">
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
+                  Nội dung của bạn
+              </li>
+            <li class="client-item">
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
+                  Nội dung của bạn
+              </li>
+            <li class="client-item">
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
+                  Nội dung của bạn
+              </li>
 
               
 
