--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title" style="color: #ffee00;" >Xin chào</h2>
         </header>
 
         <section class="about-text">
@@ -299,22 +299,22 @@
               <li class="client-item">
                   <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
-                  Nội dung của bạn
+                  <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
                   <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
-                  Nội dung của bạn
+                  <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
                   <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
-                  Nội dung của bạn
+                  <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
                   <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
-                  Nội dung của bạn
+                  <section class="about-text">Mô tả bài viết</section>
               </li>
 
               
