--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <h1 class="name" title="Mr Nhất">Mr Nhất</h1>
 
           <p class="title">Web developer</p>
+          <p class="title">Lập Trình App Đa Nền tảng</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -209,7 +210,7 @@
 
         <section class="about-text">
           <p>
-            Tôi là Nhất, một Web developer năng động, sáng tạo, và có trách nhiệm. Tôi có 500 năm kinh nghiệm trong lĩnh vực phát triển web, với chuyên môn về HTML, CSS, JavaScript, và Python. Tôi cũng có kinh nghiệm về SEO và UX/UI.
+            Tôi là một Web developer năng động, sáng tạo, và có trách nhiệm. Tôi có 500 năm kinh nghiệm trong lĩnh vực phát triển web, với chuyên môn về HTML, CSS, JavaScript, Python và lập trình App đa nền tảng Android, IOS, Windows. Tôi cũng có kinh nghiệm về SEO và UX/UI.
           </p>
         </section>
 
@@ -297,22 +298,22 @@
           <h3 class="h3 clients-title">Bài Viết</h3>
           <ul class="client-list">
               <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 1</a>
+                  <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="200" height="120">
+                  <section class="about-text">Mô tả bài viết</section>
+              </li>
+            <li class="client-item">
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 2</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 3</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
-                  <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
-                  <section class="about-text">Mô tả bài viết</section>
-              </li>
-            <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">12312311</a>
+                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 4</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
