--- a/them bai viet.html
+++ b/them bai viet.html
@@ -137,6 +137,13 @@
         Ionicons là một thư viện biểu tượng phong phú và linh hoạt, và sự tích hợp với Unpkg.com giúp nó dễ dàng để thêm vào bất kỳ ứng dụng web nào. Bằng cách sử dụng Ionicons, các nhà phát triển có thể nhanh chóng và dễ dàng tạo ra các giao diện người dùng đẹp mắt và chuyên nghiệp. Unpkg.com và Ionicons cùng nhau tạo nên một giải pháp tuyệt vời cho việc phát triển ứng dụng web hiện đại.
     </p>
   </section>
+      <script>
+  function goBack() {
+    window.history.back();
+  }
+
+  document.querySelector(".back-to-home").addEventListener("click", goBack);
+</script>
 
     </article>
     </body>
