--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title" style="color: #ffee00;" >Xin chào</h2>
+          <h2 class="h2 article-title" style="color: hsl(45, 100%, 71%);">Xin chào</h2>
+
         </header>
 
         <section class="about-text">
@@ -295,25 +296,26 @@
         </section>
 
         <section class="clients">
-          <h3 class="h3 clients-title">Bài Viết</h3>
+          <h3 class="h3 clients-title" style="color: hsl(45, 100%, 71%);">Bài Viết</h3>
+
           <ul class="client-list">
               <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 1</a>
+                  <a href="them bai viet.html" style="color: hsl(45, 100%, 71%); font-size: 30px;">Tiêu Đề 1</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="200" height="120">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 2</a>
+                  <a href="them bai viet.html" style="color: hsl(45, 100%, 71%); font-size: 30px;">Tiêu Đề 2</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="200" height="120">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 3</a>
+                  <a href="them bai viet.html" style="color: hsl(45, 100%, 71%); font-size: 30px;">Tiêu Đề 3</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
             <li class="client-item">
-                  <a href="them bai viet.html" style="color: rgb(0, 255, 64); font-size: 30px;">Tiêu Đề 4</a>
+                  <a href="them bai viet.html" style="color: hsl(45, 100%, 71%); font-size: 30px;">Tiêu Đề 4</a>
                   <img src="./assets/images/anh minh hoa.jpg" alt="Mô tả ảnh" width="300" height="200">
                   <section class="about-text">Mô tả bài viết</section>
               </li>
@@ -405,7 +407,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Kinh nghiệm</h3>
+            <h3 class="h3 article-title" style="color: hsl(45, 100%, 71%);">Kinh nghiệm</h3>
           </div>
 
           <ol class="timeline-list">
