--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Mr Nhất">Mr Nhất</h1>
+          <h1 class="name" title="Mr Nhất" style="color: hsl(45, 100%, 71%);">Mr Nhất</h1>
 
           <p class="title">Web developer</p>
           <p class="title">Lập Trình App Đa Nền tảng</p>
