--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title" style="color: hsl(45, 100%, 71%);>tôi đang làm gì</h3>
+          <h3 class="h3 service-title">tôi đang làm gì</h3>
 
           <ul class="service-list">
 
