--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Mr Nhất" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Nhất" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Mr Nhất" style="color: hsl(45, 100%, 71%);">Mr Nhất</h1>
+          <h1 class="name" title="Nhất" style="color: hsl(45, 100%, 71%);">Nhất</h1>
 
           <p class="title">Web developer</p>
           <p class="title">Lập Trình App Đa Nền tảng</p>
